<resources>
    <string name="app_name">Kitsu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_anime">Search Anime</string>
    <string name="search_manga">Search Manga</string>
    <string name="search_users">Search Users</string>
    <string name="cancel">cancel</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="this_post_contains_spoilers">This post contains spoilers.</string>
    <string name="created_at">created_at</string>
    <string name="user_name">user_name</string>
    <string name="users_comment">users_comment</string>
    <string name="create_post">Create Post</string>
    <string name="write_something">Write Something...</string>
    <string name="post">Post</string>
    <string name="nsfw">NSFW</string>
    <string name="spoiler">Spoiler</string>
    <string name="categories">Categories</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="category">category</string>
    <string name="title">title</string>

    <string-array name="text">
        <item>Notice: You can also visit our site </item>
        <item>But we made this app especially for you</item>
        <item>Where you can read and also post</item>
        <item>Your favorite manga &amp; anime</item>
        <item>Let\'s get started 🚀</item>
    </string-array>

    <string-array name="filters">
        <item>Comedy</item>
        <item>Romance</item>
        <item>School Life</item>
        <item>Adventure</item>
        <item>Yaoi</item>
        <item>Sports</item>
        <item>Japan</item>
        <item>Mystery</item>
        <item>Earth</item>
        <item>Music</item>
        <item>Kids</item>
        <item>Psychological</item>
        <item>SuperNatural</item>
        <item>Historical</item>
        <item>Ecchi</item>
        <item>Drama</item>
        <item>Magic</item>
        <item>Fantasy</item>
        <item>Harem</item>
        <item>Super Power</item>
        <item>Shounen</item>
        <item>Slice of Life</item>
        <item>Violence</item>
        <item>Thriller</item>
        <item>Horror</item>
        <item>Asia</item>
        <item>Mecha</item>
        <item>Military</item>
        <item>Martial Arts</item>
        <item>Demon</item>
        <item>Parody</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geekstudio">By GeekStudio</string>
    <string name="skip">skip</string>
    <string name="get_started">Get started</string>
    <string name="next">next</string>
</resources>