<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_bottom_search"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_bottom_add_circle"
        android:title="add" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_bottom_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_fact_check"
        android:title="library" />

</menu>