<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/prime"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_skip"
        android:text="@string/skip"
        android:fontFamily="@font/berkshire_swash"
        android:layout_margin="@dimen/page_margin_3x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:fontFamily="@font/berkshire_swash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:backgroundTint="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/lottieAnim"
        android:layout_marginBottom="@dimen/page_margin_5x"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_height="320dp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/lottieAnim"
        android:id="@+id/text"
        android:textColor="@color/orange"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="@dimen/regular_txt_25"
        android:layout_marginTop="@dimen/page_margin"
        android:gravity="center"
        style="@style/BaseMainTextView"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_get_started"
        android:text="@string/get_started"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/page_margin"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="@dimen/regular_txt_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>