<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.add.AddFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_marginTop="@dimen/page_margin_2x"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/prime"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_back"
            style="@style/BaseClickableText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/page_margin"
            android:textSize="@dimen/regular_txt_16"
            android:textColor="@color/white"
            android:gravity="center"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:textColor="@color/white"
            style="@style/BaseMainTextView"
            android:layout_marginHorizontal="90dp"
            android:textSize="@dimen/regular_txt_16"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/create_post" />

        <TextView
            android:id="@+id/tv_post"
            style="@style/BaseClickableText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/post"
            android:textColor="@color/orange"
            android:textSize="@dimen/regular_txt_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:id="@+id/user_card"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginTop="@dimen/small_margin_10"
        android:layout_marginEnd="@dimen/page_margin"
        app:cardCornerRadius="100dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,ImageContrastCheck"
            tools:src="@drawable/ic_launcher_foreground" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin_110"
        android:layout_marginEnd="@dimen/page_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginTop="@dimen/page_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/user_name"
            style="@style/BaseMainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="@dimen/small_margin_10"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_txt_18"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/comment_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_margin"
        android:layout_marginTop="@dimen/page_margin"
        android:autofillHints=""
        android:background="#1AFFFFFF"
        android:hint="@string/write_something"
        android:inputType="text"
        android:textColorHint="#A1887F"
        android:textSize="@dimen/regular_txt_20"
        app:layout_constraintTop_toBottomOf="@+id/user_card"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="20dp" />

    <RadioGroup
        android:layout_marginTop="@dimen/page_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_ed"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/nsfw_btn"
            android:text="@string/nsfw"
            android:background="@drawable/shadow"
            android:layout_marginEnd="@dimen/page_margin"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/spoiler_btn"
            android:text="@string/spoiler"
            android:background="@drawable/shadow"
            android:layout_marginStart="@dimen/page_margin"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>