<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/prime"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.greeting.board.BoardFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/worm_dots_indicator"
        app:dotsColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsSize="16dp"
        app:dotsStrokeColor="@color/grey"
        app:dotsSpacing="4dp" />

    <Button
        android:id="@+id/btn_get_started"
        android:text="@string/get_started"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/page_margin"
        android:layout_marginBottom="@dimen/big_margin_120"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="@dimen/regular_txt_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_skip"
        android:text="@string/skip"
        android:fontFamily="@font/berkshire_swash"
        android:layout_margin="@dimen/page_margin_3x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:layout_margin="@dimen/page_margin_3x"
        android:fontFamily="@font/berkshire_swash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>