<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/posts_bg"
    android:layout_marginVertical="@dimen/page_margin"
    android:paddingVertical="@dimen/page_margin"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        style="@style/BaseCircleCardView"
        android:layout_marginStart="@dimen/page_margin_2x"
        android:layout_marginTop="@dimen/small_margin_10"
        android:layout_marginEnd="@dimen/page_margin"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toStartOf="@+id/info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_img"
            style="@style/BaseImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription,ImageContrastCheck"
            tools:src="@drawable/ic_launcher_foreground" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_margin_110"
        android:layout_marginEnd="@dimen/page_margin"
        android:layout_marginBottom="@dimen/medium_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_name"
            style="@style/BaseMainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="@dimen/small_margin_10"
            android:text="@string/user_name"
            android:textColor="@color/orange"
            android:textSize="@dimen/regular_txt_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/post_data_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin"
            android:text="@string/created_at"
            android:textColor="@color/grey" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/info"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/page_margin"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/page_margin"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/users_comment"
            android:text="@string/users_comment"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/posts_img"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/element_margin"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,ImageContrastCheck"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/spoiler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shadow"
            android:gravity="center"
            android:padding="@dimen/page_margin"
            android:text="@string/this_post_contains_spoilers"
            android:textSize="@dimen/regular_txt_16"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>